// Vitest Snapshot v1

exports[`mount component 1`] = `
"<foo>
  <div>4 x 2 = 8</div><button>x1</button>
</foo>"
`;

exports[`mount component 2`] = `
"<foo>
  <div>4 x 5 = 20</div><button>x1</button>
</foo>"
`;
